--- a/soil-fertilizer/why-soil-matters-more-than-grass-type.html
+++ b/soil-fertilizer/why-soil-matters-more-than-grass-type.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Why Soil Matters More Than Grass Type</title>
-  <meta name="description" content="Grass type does not decide whether a lawn succeeds or fails. Soil condition determines whether any grass can survive, recover, and last.">
+  <meta name="description" content="Lawn success is not decided by grass type. Soil condition determines whether grass can root, recover from stress, and survive long term.">
   <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/why-soil-matters-more-than-grass-type.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Why Soil Matters More Than Grass Type">
-  <meta name="twitter:description" content="Grass type does not decide whether a lawn succeeds or fails. Soil condition determines whether any grass can survive, recover, and last.">
+  <meta name="twitter:description" content="Lawn success is not decided by grass type. Soil condition determines whether grass can root, recover from stress, and survive long term.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="Why Soil Matters More Than Grass Type">
-  <meta property="og:description" content="Grass type does not decide whether a lawn succeeds or fails. Soil condition determines whether any grass can survive, recover, and last.">
+  <meta property="og:description" content="Lawn success is not decided by grass type. Soil condition determines whether grass can root, recover from stress, and survive long term.">
   <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/why-soil-matters-more-than-grass-type.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
@@ -56,44 +56,40 @@
   <main class="container">
     <h1>Why Soil Matters More Than Grass Type</h1>
 
-<h2>Grass choice is not the deciding factor</h2>
-<p>Many lawn problems get blamed on the wrong grass type. People switch seed varieties expecting better results, only to watch the new grass struggle the same way the old one did.</p>
-<p>This happens because grass type does not control whether a lawn works. The soil underneath does.</p>
+<h2>Grass type is often blamed for the wrong reasons</h2>
+<p>When a lawn struggles, the first thing many people blame is the grass itself. They assume they picked the wrong variety and that switching seed will fix the problem.</p>
+<p>Most of the time, the grass is not the issue. The soil underneath it is.</p>
 
-<h2>Grass grows where soil allows it to</h2>
-<p>Grass does not grow because it was labeled drought tolerant or shade tolerant. It grows because its roots can spread, anchor, and stay alive in the soil.</p>
-<p>If the soil is hard, compacted, or constantly wet, no grass type can perform the way it is advertised.</p>
+<h2>Grass grows based on where roots can live</h2>
+<p>Grass does not care what the bag or label says. It only grows where roots can spread and stay alive.</p>
+<p>If the soil is too hard, stays soggy, or dries out too fast, roots cannot do their job, and no grass type will perform well.</p>
 
-<h2>Roots decide how strong the lawn becomes</h2>
-<p>The visible part of grass only tells part of the story. What matters most is how deep and healthy the roots are.</p>
-<p>Roots only grow when soil lets them. When soil is tight or airless, roots stay shallow and weak no matter what grass you planted.</p>
+<h2>Soil decides how grass handles stress</h2>
+<p>Every lawn deals with stress from heat, lack of rain, foot traffic, and mowing. Good soil helps grass recover after those stresses.</p>
+<p>Bad soil causes small problems to stack up until the lawn suddenly declines.</p>
 
-<h2>Stress reveals soil problems fast</h2>
-<p>Heat, drought, foot traffic, and mowing all stress grass. Healthy soil helps grass recover after stress. Poor soil makes every problem worse.</p>
-<p>This is why lawns with bad soil seem fine one week and suddenly fall apart the next.</p>
+<h2>Mowing problems often trace back to soil</h2>
+<p>Cutting grass short does not instantly damage a lawn. The damage happens when grass cannot recover because roots are already weak.</p>
+<p>This is why problems described in <a href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html">What Happens If You Cut Grass Too Short</a> show up faster and more severely when soil conditions are poor.</p>
 
-<h2>Mowing problems often start below ground</h2>
-<p>Cutting grass shorter than usual does not automatically ruin a lawn. It becomes a problem when roots are already struggling.</p>
-<p>When soil is weak, grass cannot bounce back after mowing, which is why issues described in <a href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html">What Happens If You Cut Grass Too Short</a> show up faster on poor soil.</p>
+<h2>Soil slowly changes even when lawns look fine</h2>
+<p>Soil is always changing under the surface. Walking, mowing, and normal use press it tighter over time.</p>
+<p>Grass often hides these changes until roots can no longer push through the soil.</p>
 
-<h2>Soil damage builds over time</h2>
-<p>Soil does not fail overnight. Walking, mowing, parking equipment, and regular use slowly press soil tighter and tighter.</p>
-<p>Grass often looks fine until roots suddenly cannot push through the soil anymore.</p>
+<h2>Traffic damages soil before grass shows wear</h2>
+<p>Foot traffic and equipment do not just wear grass blades. They squeeze the ground beneath them.</p>
+<p>Over time, this pressure blocks root growth, which is why patterns explained in <a href="/soil-fertilizer/how-traffic-affects-soil-health.html">how traffic affects soil health</a> appear even when the grass type stays the same.</p>
 
-<h2>Traffic hurts soil more than grass type can help</h2>
-<p>No grass variety is designed to handle repeated pressure from people, pets, or equipment without help from the soil.</p>
-<p>When traffic compresses soil, grass roots stop spreading, which explains patterns caused by <a href="/soil-fertilizer/how-traffic-affects-soil-health.html">how traffic affects soil health</a>.</p>
+<h2>Changing grass does not repair damaged ground</h2>
+<p>Planting a new grass type does not loosen soil or improve how water moves through it.</p>
+<p>Without addressing soil problems, new grass often struggles faster than the old grass did.</p>
 
-<h2>Switching grass does not fix soil</h2>
-<p>Changing grass types does not loosen soil, improve drainage, or restore damaged ground.</p>
-<p>Without fixing soil conditions, new grass often fails faster than the old grass did.</p>
+<h2>Soil determines how long a lawn survives</h2>
+<p>Grass type influences how a lawn looks. Soil determines how long it lasts.</p>
+<p>When soil slowly degrades, lawns become harder to maintain each year no matter what grass is planted.</p>
 
-<h2>Soil controls how long a lawn lasts</h2>
-<p>Grass type affects color, texture, and growth speed. Soil controls how long the lawn survives.</p>
-<p>When soil slowly degrades, lawns become harder to maintain year after year no matter how much seed or fertilizer is used.</p>
-
-<h2>Soil is the foundation that matters</h2>
-<p>Every lawn depends on soil first. When soil supports roots, many grass types can succeed.</p>
+<h2>Soil is the real foundation of the lawn</h2>
+<p>A healthy lawn starts below ground. When soil supports strong roots, many grass types can succeed.</p>
 <p>When soil fails, grass choice becomes a minor detail instead of a solution.</p>
   </main>
 
