--- a/soil-fertilizer/how-soil-forms-in-yards.html
+++ b/soil-fertilizer/how-soil-forms-in-yards.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Soil Forms in Yards</title>
-  <meta name="description" content="Yard soil is not just “dirt.” It forms from what was there before, what construction did to it, and years of water, grass, traffic, and changes at the surface.">
+  <meta name="description" content="Yard soil is not just dirt. It forms from what was there before construction, how the yard was built, and years of water, grass growth, traffic, and use.">
   <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/how-soil-forms-in-yards.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="How Soil Forms in Yards">
-  <meta name="twitter:description" content="Yard soil is not just “dirt.” It forms from what was there before, what construction did to it, and years of water, grass, traffic, and changes at the surface.">
+  <meta name="twitter:description" content="Yard soil is not just dirt. It forms from what was there before construction, how the yard was built, and years of water, grass growth, traffic, and use.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="How Soil Forms in Yards">
-  <meta property="og:description" content="Yard soil is not just “dirt.” It forms from what was there before, what construction did to it, and years of water, grass, traffic, and changes at the surface.">
+  <meta property="og:description" content="Yard soil is not just dirt. It forms from what was there before construction, how the yard was built, and years of water, grass growth, traffic, and use.">
   <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/how-soil-forms-in-yards.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
@@ -57,40 +57,40 @@
     <h1>How Soil Forms in Yards</h1>
 
 <h2>Yard soil is built, not just found</h2>
-<p>Most people think soil is just “what the yard is made of.” In reality, yard soil is something that gets shaped over time by what was there before the house, what construction did, and how the yard has been used since.</p>
-<p>If a lawn feels like it is constantly fighting you, it is usually because the soil in that yard formed in a way that makes grass work harder than it should.</p>
+<p>Soil in a yard is not something that simply exists unchanged beneath the grass. It forms over time based on what was there before the house, how the lot was developed, and how the yard has been treated since.</p>
+<p>When a lawn constantly struggles, it is often because the soil in that yard developed in a way that makes growing grass harder than it should be.</p>
 
 <h2>The starting point is whatever the builder left behind</h2>
-<p>Before a house is built, the ground might be fairly normal. After a build, it often is not. Heavy equipment drives over it, the surface gets scraped, and different layers get mixed together. Sometimes good topsoil is removed. Sometimes fill dirt is brought in.</p>
-<p>This is why “new yard soil” often acts like a problem even when the lawn is young and the grass is freshly installed.</p>
+<p>Before construction, the ground may have had a natural soil structure. During building, that structure is often disrupted. Heavy equipment compacts the ground, surface layers are scraped away, and different materials are mixed or replaced.</p>
+<p>As a result, many new yards start with soil that is dense, uneven, or missing the top layer grass depends on, which explains why young lawns can struggle from the start.</p>
 
-<h2>Water is the main force that shapes what happens next</h2>
-<p>Rain and irrigation do more than water grass. They push fine material downward, wash away loose material on slopes, and repeatedly wet and dry the ground. Over time, water patterns decide where soil becomes soft and rich, and where it becomes hard and thin.</p>
-<p>This is one reason two spots in the same yard can feel like completely different soil even though they are ten feet apart.</p>
+<h2>Water shapes soil long after construction ends</h2>
+<p>Rain and irrigation do more than keep grass alive. Over time, water moves fine particles downward, washes soil away from slopes, and repeatedly expands and contracts the ground as it wets and dries.</p>
+<p>These patterns slowly change how soil behaves, which is why two areas of the same yard can drain, dry, or compact very differently.</p>
 
-<h2>Grass changes the soil slowly, even when you do nothing</h2>
-<p>Grass sheds old blades, drops tiny bits of root, and constantly grows and dies back. That adds organic material right at the surface. It also creates channels where water can move, as long as the soil is not too compacted.</p>
-<p>Over years, a healthy lawn can improve the top layer of soil simply by existing, but it cannot do that when the soil is already sealed up or packed tight.</p>
+<h2>Grass gradually changes the soil it grows in</h2>
+<p>As grass grows, it constantly sheds material above and below the surface. Old blades break down, roots die back and regrow, and organic matter slowly builds near the surface.</p>
+<p>In healthy conditions, this process improves soil over time, but when soil is already compacted or sealed, grass cannot make those improvements on its own.</p>
 
-<h2>Traffic and use shape soil faster than people realize</h2>
-<p>Walking paths, dog runs, kids playing, mower wheels, and repeated foot traffic all press soil down. You might not notice it happening, but the ground gets tighter and tighter until roots struggle.</p>
-<p>When soil loses that loose, breathable feel, grass starts acting weak even if nothing “changed,” which is why it helps to recognize <a href="/soil-fertilizer/when-soil-is-the-real-problem.html">When Soil Is the Real Problem</a>.</p>
+<h2>Traffic and use reshape soil faster than expected</h2>
+<p>Everyday activity has a lasting impact on soil. Foot traffic, pets, mower wheels, and repeated movement over the same paths gradually press the ground tighter.</p>
+<p>This slow compression often goes unnoticed until grass begins to weaken, which is why recognizing <a href="/soil-fertilizer/when-soil-is-the-real-problem.html">when soil is the real problem</a> helps explain lawns that decline without an obvious cause.</p>
 
-<h2>Soil problems often show up as “random” lawn issues</h2>
-<p>A lot of yard problems get treated like grass problems. Thin spots, weird color, patchy growth, and areas that never respond to fertilizer can all look like the lawn is just picky or sick.</p>
-<p>In many cases, the grass is reacting to soil conditions that formed over years, and the fastest way to stop guessing is to use a real process like <a href="/soil-fertilizer/how-to-diagnose-soil-issues-correctly.html">How to Diagnose Soil Issues Correctly</a>.</p>
+<h2>Many lawn problems are symptoms of how soil formed</h2>
+<p>Thin grass, uneven growth, stubborn bare spots, and areas that never respond to fertilizer are often treated as separate issues. In reality, they frequently trace back to soil conditions that developed over years.</p>
+<p>Instead of guessing, following a clear process like <a href="/soil-fertilizer/how-to-diagnose-soil-issues-correctly.html">how to diagnose soil issues correctly</a> makes it easier to see what the grass is actually reacting to.</p>
 
-<h2>Soil health affects how easily disease takes hold</h2>
-<p>Most people think lawn disease is just bad luck or bad weather. But grass gets sick more easily when it is already stressed. Weak roots, poor drainage, and compacted ground all keep grass from staying strong.</p>
-<p>This is why the same fungus or disease pressure hits some yards hard and barely touches others, and why <a href="/soil-fertilizer/how-soil-health-affects-disease.html">How Soil Health Affects Disease</a> matters more than most people expect.</p>
+<h2>Soil health influences how easily disease takes hold</h2>
+<p>Lawn diseases rarely appear at random. Grass that is already stressed by poor drainage, compacted ground, or weak roots is far more vulnerable.</p>
+<p>This is why similar weather and disease pressure can affect neighboring lawns differently, a pattern closely tied to <a href="/soil-fertilizer/how-soil-health-affects-disease.html">how soil health affects disease</a>.</p>
 
-<h2>Amendments can help, but only when they match the situation</h2>
-<p>Yard soil can be changed, but not by guessing. Some yards need better drainage. Some need loosening. Some need the surface rebuilt slowly. Some need nothing except time and less abuse.</p>
-<p>Even something common like lime can be helpful in the right situation and useless or harmful in the wrong one, which is why <a href="/soil-fertilizer/how-lime-affects-lawn-soil.html">How Lime Affects Lawn Soil</a> is not a one-size-fits-all fix.</p>
+<h2>Amendments only help when they match the soil’s needs</h2>
+<p>Soil can be improved, but only when changes match the actual conditions present. Some yards need better drainage, some need loosening, and others simply need time and reduced stress.</p>
+<p>Even common products like lime can be helpful or harmful depending on the situation, which is why understanding <a href="/soil-fertilizer/how-lime-affects-lawn-soil.html">how lime affects lawn soil</a> matters before applying anything.</p>
 
-<h2>Most yard soil becomes a history of everything done to it</h2>
-<p>By the time a yard is a few years old, the soil is no longer just “native soil” or “topsoil.” It becomes a mix of construction leftovers, watering habits, grass growth, and use patterns.</p>
-<p>That is why the best lawns are not usually the ones with the fanciest grass type. They are the ones where the soil formed into something grass can actually live in.</p>
+<h2>Over time, yard soil becomes a record of how it was treated</h2>
+<p>After several years, yard soil is no longer just native ground or added material. It becomes a blend shaped by construction, watering habits, grass growth, and everyday use.</p>
+<p>This is why the most reliable lawns are not always the ones with special grass types, but the ones where soil gradually formed into something grass can consistently live in.</p>
   </main>
 
   <footer class="site-footer">
