--- a/soil-fertilizer/signs-of-healthy-lawn-soil.html
+++ b/soil-fertilizer/signs-of-healthy-lawn-soil.html
@@ -57,40 +57,40 @@
     <h1>Signs of Healthy Lawn Soil</h1>
 
 <h2>Healthy soil shows results without constant effort</h2>
-<p>The clearest sign of healthy lawn soil is how little you have to fight it. Grass grows steadily, fills in on its own, and responds predictably to normal care.</p>
-<p>When a lawn looks good without constant adjustments, the soil underneath is doing most of the work.</p>
+<p>The clearest sign of healthy lawn soil is how little resistance you feel when caring for it. Grass grows steadily, fills in naturally, and responds the way you expect it to.</p>
+<p>When a lawn looks good without constant corrections, the soil underneath is carrying most of the load.</p>
 
-<h2>Growth stays consistent instead of stopping and starting</h2>
-<p>Grass growing in healthy soil follows a regular pattern. It thickens during active seasons and slows naturally when conditions change.</p>
-<p>You do not see sudden stalls, unexplained thinning, or cycles of improvement followed by collapse.</p>
+<h2>Growth follows a steady pattern instead of breaking down</h2>
+<p>Grass rooted in healthy soil grows with consistency. It thickens during active periods and slows down when conditions naturally change.</p>
+<p>You do not see sudden stalls, unexplained thinning, or cycles where improvement is immediately followed by decline.</p>
 
-<h2>Recovery from stress happens quickly</h2>
-<p>Mowing, heat, and foot traffic stress every lawn. Healthy soil allows roots to recover quickly after those events.</p>
-<p>When grass bounces back within days instead of weeks, it is a sign roots are supported below ground.</p>
+<h2>Recovery from stress happens quickly and evenly</h2>
+<p>Every lawn experiences stress from mowing, heat, and foot traffic. Healthy soil allows grass to recover without lingering damage.</p>
+<p>When the lawn rebounds in days rather than weeks, it signals that roots have the support they need.</p>
 
-<h2>Color stays even without chasing it</h2>
-<p>Healthy soil delivers nutrients steadily, which keeps grass color uniform across the yard. You do not see sharp color changes from one section to another.</p>
-<p>When fertilizer improves color evenly instead of creating streaks or patches, it reflects how <a href="/soil-fertilizer/how-fertilizer-affects-grass-color.html">how fertilizer affects grass color</a> only when soil can distribute nutrients properly.</p>
+<h2>Color remains uniform across the yard</h2>
+<p>Healthy soil delivers nutrients evenly, which keeps grass color consistent instead of blotchy or streaked.</p>
+<p>When fertilizer produces a balanced color change across the lawn instead of isolated reactions, it reflects a system where nutrients are already moving and being used efficiently. This relationship becomes clearer in <a href="/soil-fertilizer/how-fertilizer-affects-grass-color.html">How Fertilizer Affects Grass Color</a>.</p>
 
-<h2>Water soaks in instead of pooling or running off</h2>
-<p>Soil health shows up during watering and rain. Water moves into the ground instead of sitting on the surface or racing downhill.</p>
-<p>When slopes hold grass instead of washing out, it shows the soil can resist the forces described in <a href="/soil-fertilizer/why-sloped-lawns-lose-soil.html">why sloped lawns lose soil</a>.</p>
+<h2>Water enters the soil instead of escaping it</h2>
+<p>Soil health becomes obvious during watering or rainfall. Water soaks in instead of pooling on the surface or rushing downhill.</p>
+<p>Lawns that hold together on slopes without thinning or washing out demonstrate soil that can resist erosion forces. Those dynamics are explored further in <a href="/soil-fertilizer/why-sloped-lawns-lose-soil.html">Why Sloped Lawns Lose Soil</a>.</p>
 
-<h2>Roots grow deep enough to buffer temperature swings</h2>
-<p>Healthy soil protects roots from rapid heating and cooling. That insulation keeps growth steady even during hot days and cool nights.</p>
-<p>This stability helps explain why nutrient use stays balanced when <a href="/soil-fertilizer/how-ph-affects-nutrient-uptake.html">how pH affects nutrient uptake</a> is supported by soil that does not stress roots.</p>
+<h2>Roots stay protected from rapid temperature swings</h2>
+<p>Healthy soil buffers roots from sharp heating and cooling, which keeps growth stable through daily and seasonal changes.</p>
+<p>This stability helps nutrients stay usable and uptake remain steady, a connection that becomes more visible when looking at <a href="/soil-fertilizer/how-ph-affects-nutrient-uptake.html">How pH Affects Nutrient Uptake</a>.</p>
 
-<h2>Problem areas do not repeat year after year</h2>
-<p>In healthy soil, weak spots gradually disappear instead of returning each season. Bare patches fill in and thin areas thicken.</p>
-<p>When problems resolve instead of cycling, it shows the soil has enough capacity to heal.</p>
+<h2>Problem areas fade instead of repeating</h2>
+<p>In healthy soil, weak spots gradually disappear rather than reappearing each season. Thin areas thicken and bare patches fill in.</p>
+<p>When issues resolve instead of cycling, it shows the soil has enough capacity to repair itself.</p>
 
-<h2>Maintenance produces predictable results</h2>
-<p>Normal care works when soil is healthy. Fertilizer feeds, watering hydrates, and mowing maintains instead of causing setbacks.</p>
-<p>You are not forced into constant corrections because the foundation is stable.</p>
+<h2>Routine care produces predictable outcomes</h2>
+<p>Basic maintenance works when soil is healthy. Fertilizer feeds, watering hydrates, and mowing maintains without triggering setbacks.</p>
+<p>You are no longer chasing problems because the foundation beneath the lawn is stable.</p>
 
-<h2>Healthy soil raises the lawn’s ceiling</h2>
-<p>Grass can only perform as well as the soil allows. Healthy soil raises that limit by supporting roots through stress and seasonal change.</p>
-<p>When a lawn feels easy to manage year after year, the soil beneath it is the reason.</p>
+<h2>Healthy soil raises the lawn’s long-term ceiling</h2>
+<p>Grass can only perform as well as the soil allows. Healthy soil raises that limit by supporting roots through stress, weather shifts, and normal wear.</p>
+<p>When a lawn feels easier to manage year after year, the soil beneath it is the reason.</p>
   </main>
 
   <footer class="site-footer">
