--- a/soil-fertilizer/signs-of-compacted-lawn-soil.html
+++ b/soil-fertilizer/signs-of-compacted-lawn-soil.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Signs of Compacted Lawn Soil</title>
-  <meta name="description" content="Compacted lawn soil reveals itself through poor recovery, uneven growth, and water behavior that never seems right. The signs show up before grass fully fails.">
+  <meta name="description" content="Compacted lawn soil reveals itself through stalled growth, poor recovery, and water that never behaves correctly. The warning signs appear before grass dies.">
   <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/signs-of-compacted-lawn-soil.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Signs of Compacted Lawn Soil">
-  <meta name="twitter:description" content="Compacted lawn soil reveals itself through poor recovery, uneven growth, and water behavior that never seems right. The signs show up before grass fully fails.">
+  <meta name="twitter:description" content="Compacted lawn soil reveals itself through stalled growth, poor recovery, and water that never behaves correctly. The warning signs appear before grass dies.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="Signs of Compacted Lawn Soil">
-  <meta property="og:description" content="Compacted lawn soil reveals itself through poor recovery, uneven growth, and water behavior that never seems right. The signs show up before grass fully fails.">
+  <meta property="og:description" content="Compacted lawn soil reveals itself through stalled growth, poor recovery, and water that never behaves correctly. The warning signs appear before grass dies.">
   <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/signs-of-compacted-lawn-soil.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
@@ -56,41 +56,42 @@
   <main class="container">
     <h1>Signs of Compacted Lawn Soil</h1>
 
-<h2>Compacted soil resists improvement</h2>
-<p>One of the earliest signs of compacted soil is how resistant the lawn feels to care. You can water correctly, fertilize responsibly, and mow on schedule, yet progress remains limited.</p>
-<p>When effort produces little change, the problem is usually not the grass itself, but the ground it is rooted in.</p>
+<h2>Progress slows no matter what you change</h2>
+<p>One of the first signs of compacted soil is how stubborn the lawn becomes. You adjust watering, dial in fertilizer, and stay consistent with mowing, yet improvement barely shows.</p>
+<p>When care stops producing results, the issue is usually not the routine but the physical condition of the soil underneath it.</p>
 
-<h2>Grass recovers slowly from normal stress</h2>
-<p>Mowing, heat, and foot traffic stress every lawn. In compacted soil, recovery drags on instead of resolving quickly.</p>
-<p>If the lawn seems stuck in a constant state of stress, roots are likely struggling to function below the surface.</p>
+<h2>Grass struggles to recover from ordinary stress</h2>
+<p>Heat, mowing, and foot traffic stress every lawn. In compacted soil, that stress lingers instead of fading.</p>
+<p>If grass looks tired days or weeks after routine use, roots are likely unable to recover properly.</p>
 
-<h2>Growth appears uneven without a clear pattern</h2>
-<p>Compacted soil rarely affects an entire yard evenly. High-traffic areas, mower turns, and walking paths tighten faster than surrounding ground.</p>
-<p>This leads to patchy growth that does not match watering zones, sun exposure, or fertilizer coverage.</p>
+<h2>Weak growth follows traffic patterns</h2>
+<p>Compaction rarely affects a yard evenly. It builds fastest where people walk, where mowers turn, and where equipment passes repeatedly.</p>
+<p>These areas thin out first, creating patchy growth that does not match sunlight or watering patterns.</p>
 
-<h2>Water behaves unpredictably</h2>
-<p>In compacted soil, water has trouble moving downward. It may pool on the surface, run off, or disappear too quickly.</p>
-<p>When watering never seems to hydrate the lawn evenly, it points to soil that has lost its internal structure.</p>
+<h2>Water never seems to soak in correctly</h2>
+<p>Compacted soil resists water movement. Moisture may pool, run off, or vanish without hydrating the root zone.</p>
+<p>When watering never feels effective no matter how carefully it is done, soil structure has likely collapsed.</p>
 
-<h2>Roots stay shallow even with proper care</h2>
-<p>Healthy roots grow downward to follow moisture and nutrients. Compacted soil blocks that movement.</p>
-<p>As a result, grass becomes shallow-rooted and dependent on constant surface conditions.</p>
+<h2>Roots stay shallow and fragile</h2>
+<p>Healthy roots grow downward to follow moisture and nutrients. Compacted soil blocks that path.</p>
+<p>As a result, grass depends on surface conditions and becomes far more sensitive to heat and drought.</p>
 
-<h2>Fertilizer produces weak or inconsistent results</h2>
-<p>When soil is compacted, nutrients cannot spread evenly through the root zone. Some areas receive too much, others too little.</p>
-<p>This is not a feeding issue but a storage and movement problem, which becomes clearer when considering how <a href="/soil-fertilizer/how-soil-stores-nutrients.html">How Soil Stores Nutrients</a> under normal conditions.</p>
+<h2>Fertilizer response becomes erratic</h2>
+<p>In compacted soil, nutrients cannot spread evenly. Some areas get overloaded while others remain starved.</p>
+<p>This is not a feeding mistake. It happens because compacted soil no longer functions as a system that can store and distribute nutrients properly.</p>
+<p>That underlying behavior is explained more clearly in <a href="/soil-fertilizer/how-soil-stores-nutrients.html">How Soil Stores Nutrients</a>.</p>
 
-<h2>Grass performance depends heavily on location</h2>
-<p>Lawns with compacted soil often have spots that perform well next to areas that consistently fail.</p>
-<p>These differences are not about grass variety but about how easily roots can function in each section, a pattern explained by <a href="/soil-fertilizer/why-grass-grows-better-in-some-soil.html">Why Grass Grows Better in Some Soil</a>.</p>
+<h2>Some areas thrive while others never improve</h2>
+<p>Lawns with compacted soil often show sharp contrasts within short distances. One section looks acceptable while another consistently fails.</p>
+<p>Those differences are rooted in soil condition rather than grass type or care level, which is why patterns like these appear in <a href="/soil-fertilizer/why-grass-grows-better-in-some-soil.html">Why Grass Grows Better in Some Soil</a>.</p>
 
-<h2>Surface symptoms distract from the real issue</h2>
-<p>Yellowing, thinning, and weak color often get blamed on fertilizer or watering schedules.</p>
-<p>In reality, those symptoms reflect soil that can no longer support normal root activity, which is why understanding <a href="/soil-fertilizer/what-lawn-soil-actually-is.html">What Lawn Soil Actually Is</a> reframes the problem entirely.</p>
+<h2>Surface symptoms distract from the real cause</h2>
+<p>Yellowing, thinning, and dull color often get blamed on fertilizer or watering schedules.</p>
+<p>In reality, those symptoms are downstream effects of soil that can no longer support roots, a shift that becomes obvious once you understand <a href="/soil-fertilizer/what-lawn-soil-actually-is.html">What Lawn Soil Actually Is</a>.</p>
 
-<h2>Compaction explains why lawns stall over time</h2>
-<p>As soil tightens year after year, grass loses its ability to adapt to stress.</p>
-<p>When decline happens despite consistent care, compaction is often the hidden factor that finally limits recovery.</p>
+<h2>Compaction explains long-term stagnation</h2>
+<p>As soil tightens year after year, grass loses its margin for recovery.</p>
+<p>When decline continues despite consistent care, compaction is often the hidden limit that finally stops progress.</p>
   </main>
 
   <footer class="site-footer">
